# opencvjp-sample

./: CMakeLists.txt  ProjectHome.md
c/: CMakeLists.txt  affine1.c  affine2.c  backprojection.c  backprojectpatch.c  binarize.c  capture.c  color-sub.c  combine_images.c  edge.c  histogram.c  hue_val.c  kmeans_rgb.c  load_data.c  max_rect.c  reduce_max.c  save_data.c  xy_maxsum.c
cpp/: CMakeLists.txt  affine1_cpp.cpp  affine2_cpp.cpp  affine_1.cpp  backprojectpatch_cpp.cpp  bounding_rect_cpp.cpp  color-sub_cpp.cpp  combine_images_cpp.cpp  dft_idft_cpp.cpp  drag_invert_cpp.cpp  encode_decode_test.cpp  extract_surf_cpp.cpp  histogram_cpp.cpp  hue_val_cpp.cpp  integral_image.cpp  kmeans_rgb_cpp.cpp  load_data_cpp.cpp  max_rect_cpp.cpp  nonlocalmeansfilter.cpp  point_cloud_test.cpp  poisson_blending.hpp  poisson_blending_main.cpp  save_data_cpp.cpp  sparse_mat_deblur.cpp  superresolution_SparseMat.cpp  xy_maxsum_cpp.cpp
tags/opencvjp-sample-0.10.0/c/: CMakeLists.txt  affine2.c  backprojectpatch.c
tags/opencvjp-sample-0.10.0/cpp/: affine2_cpp.cpp  combine_images_cpp.cpp
trunk/: CMakeLists.txt
trunk/c/: CMakeLists.txt  affine1.c  affine2.c  affine_1.c  affine_2.c  bounding_rect.c  color-sub.c  combine_images.c  edge.c  histogram.c  kmeans_rgb.c  load_data.c  xy_maxsum.c
trunk/cpp/: CMakeLists.txt  affine1_cpp.cpp  affine2_cpp.cpp  backprojection_cpp.cpp  backprojectpatch_cpp.cpp  binarize_cpp.cpp  bounding_rect_cpp.cpp  capture_cpp.cpp  color-sub_cpp.cpp  combine_images_cpp.cpp  dft_idft_cpp.cpp  drag_invert_cpp.cpp  edge_cpp.cpp  feature_detect_cpp.cpp  grabcut_cpp.cpp  histogram_cpp.cpp  kmeans_rgb_cpp.cpp  load_data_cpp.cpp  max_rect_cpp.cpp  nonlocalmeansfilter.cpp  point_cloud_test.cpp  poisson_blending.hpp  save_data_cpp.cpp  superresolution_SparseMat.cpp  xy_maxsum_cpp.cpp
